Update CSS to use text-align: initial; in favor of text-align: left;

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -14,7 +14,7 @@ body [xml|lang]{
 [epub|type~="z3998:song"] p,
 [epub|type~="z3998:poem"] p,
 [epub|type~="z3998:verse"] p{
-	text-align: left;
+	text-align: initial;
 	text-indent: 0;
 }
 
